k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arrienda-frontend-ingress
  namespace: arriendatufinca
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  rules:
  - host:
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: arrienda-frontend
            port:
              number: 4200
